# sphinx-swaggerui

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: gh-pages.yml
docs/: conf.py  index.rst
sphinx_swaggerui/: __init__.py  directives.py  swagger-ui.html
tests/: conftest.py  test_sphinx_swaggerui.py
tests/docs/: conf.py  index.rst
